fix: fix visual glitch where `.icard` elements would overflow on small screens

--- a/src/styles/sections/Amenities.css
+++ b/src/styles/sections/Amenities.css
@@ -47,3 +47,15 @@
 		margin-bottom: 2rem;
 	}
 }
+
+@media screen and (max-width: 500px) {
+	.icard-container {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media screen and (max-width: 350px) {
+	.icard-container {
+		grid-template-columns: repeat(1, 1fr);
+	}
+}
